# data-agent

./: .git_commit_msg.txt  .gitignore  README.md  main.py  pyproject.toml  test.py  test_typed_dict.py
app/agent/: context.py  graph.py  llm.py  state.py
app/agent/nodes/: add_extra_context.py  correct_sql.py  extract_keywords.py  filter_metric.py  filter_table.py  generate_sql.py  merge_retrieved_info.py  recall_column.py  recall_metric.py  recall_value.py  run_sql.py  validate_sql.py
app/api/: dependencies.py  lifespan.py
app/api/routers/: query_router.py
app/api/schemas/: query_schema.py
app/clients/: embedding_client_manager.py  embedding_client_managet.py  es_client_manager.py  es_client_managet.py  mysql_client_manager.py  mysql_client_managet.py  qdrant_client_manager.py  qdrant_client_managet.py
app/conf/: app_config.py  meta_config.py
app/core/: context.py  log.py
app/entities/: column_info.py  column_metric.py  metric_info.py  table_info.py  value_info.py
app/models/: base.py  column_info.py  column_metric.py  metric_info.py  table_info.py
app/prompt/: prompt_loader.py
app/repositories/es/: value_es_repository.py
app/repositories/mysql/dw/: dw_mysql_repository.py
app/repositories/mysql/meta/: meta_mysql_repository.py
app/repositories/mysql/meta/mappers/: column_info_mapper.py  (+3 more)
app/repositories/qdrant/: column_qdrant_repository.py  metric_qdrant_repository.py
app/scripts/: build_meta_knowledge.py
app/services/: meta_knowledge_service.py  query_service.py
conf/: app_config.yaml
prompts/: filter_table_info.prompt
